--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="./main.css">
 </head>
 <body>
-	<p style="font-size:0.5vw;"> Eh, paano kung hindi Hindi ka nakilala Siguro, nakakulong pa din Sa nakaraan, 'di makalaya Ang sarili, dinadaya
+	<p> Eh, paano kung hindi Hindi ka nakilala Siguro, nakakulong pa din Sa nakaraan, 'di makalaya Ang sarili, dinadaya
 		Yeah, naglalasing-lasing, hindi pala kaya Yeah, ayokong magising nang 'di ka kasama Kung nandito ka sa tabi, mas masaya sana
 		Ngayon, hinahanap ka, nasasaktan Buti na lang, may alak pa na nasasandalan Dinadaan ko lang sa amat ang nararamdaman
 		Para naman kahit papa'no gumaan Dahil sa totoo lang Sa 'yo ko lang 'to naramdaman Ganito pala ang magmahal, mayro'ng kabaliktaran
