--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     
     <audio autoplay controls loop hidden>
         <source src="kagomecut.mp3" type="audio/mp3" >
+        <source src="kagomecut.mp3" type="audio/mpeg" >
+        <source src="kagomecut.mp3" type="audio/ogg" >
+        <source src="kagomecut.mp3" type="audio/wav" >
     </audio>
 
 </body>
