--- a/index.html
+++ b/index.html
@@ -65,11 +65,10 @@
         </span>
     </h1>
 
-      <td style="vertical-align: middle;">
-        <h2 style="text-align:center;">
-            Niflheim-ai
-        </h2>
-      </td>
+    <div class="h2">
+        Niflheim-ai
+    </div>  
 
 </body>
+
 </html>
