--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
   <button type="button" class="sched-button" id="sched-button" style="font-size: 1vw;">Class Schedule</button>
 
-  <img id="myImg" src="/niflheim-ai.github.io/images/sched.png" alt="Schedule">
+  <img id="myImg" src="images/sched.png" alt="Schedule">
 
   <!-- The Modal -->
   <div id="myModal" class="modal">
@@ -86,7 +86,7 @@
     <span class="close">&times;</span>
 
     <!-- Modal Content (The Image) -->
-    <img class="modal-content" id="img01" src="/niflheim-ai.github.io/images/sched.png">
+    <img class="modal-content" id="img01">
 
     <!-- Modal Caption (Image Text) -->
     <div id="caption"></div>
